fix white background bug behind footer logo 'LumenMastery'

--- a/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
@@ -701,9 +701,6 @@ ol li li::before, ol li li li::before {
 /*  SUB NAV HEADER/FOOTER  */
 /***************************/
 
-.row {
-  background-color: #fff;
-}
 .columns {
   padding: 0;
 }
